# tesseract_z_issue

./: CMakeLists.txt  README.md  main.cpp
